--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "movage",
+  "description": "Simple tool for moving images in your markdown document.",
   "version": "0.0.1",
   "main": "index.js",
   "bin": {
